[build-system]
requires = [
    "scikit-build-core>=0.5.0",
    "pybind11>=2.11.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "my-custom-env"
version = "0.1.0"
description = "A custom RL environment with C++ backend and Gymnasium wrapper."
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "gymnasium>=0.29",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/you/my-custom-env"

scikit-build-core config
[tool.scikit-build]
minimum-version = "0.5"
wheel.packages = ["src/my_custom_env"]